--- a/Index.html
+++ b/Index.html
@@ -13,9 +13,10 @@
         <select id="search-engine">
             <option value="https://www.duckduckgo.com/">DuckDuckGo</option>
             <option value="https://www.google.com/search">Google</option>
+            <option value="https://www.wikipedia.org/wiki/">Wikipedia</option>
         </select>
         <form action="https://www.duckduckgo.com/" class="searchform" method="get" name="searchform" id="search-form">
-            <input autocomplete="off" class="form-control search" name="q" required="required" type="text">
+            <input autocomplete="off" id="search-input" class="form-control search" name="q" required="required" type="text">
             <button class="button" type="submit">&#128269;</button>
         </form>
     </div>
