--- a/Index.html
+++ b/Index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="Index.css">
+    <link rel="icon" href="pics/icon.jpg">
     <title>My Home Page</title>
 </head>
 
@@ -21,7 +22,7 @@
         </form>
     </div>
     <div class='pages'>
-        <a href="https://www.duolingo.com/"><img src="pics/duolingo.jpg" alt="Duolingo"></a>
+        <a href="https://www.memrise.com"><img src="pics/memrise.png" alt="Duolingo"></a>
         <a href="https://www.udemy.com/"><img src="pics/udemy.png" alt="Duolingo"></a>
         <a href="https://www.codewars.com/dashboard"><img src="pics/codewars.png" alt="Duolingo"></a>
         <a href="https://fedoramagazine.org/"><img src="pics/fedora.jpg" alt="Fedora Magazina"></a>
