--- a/Index.html
+++ b/Index.html
@@ -32,7 +32,7 @@
         <a href="https://distrowatch.com/"><img src="pics/distrowatch.jpg" alt="Distrowatch"></a>
         <br>
         <a href="https://web.whatsapp.com/"><img src="pics/whatsapp.png" alt="WhatsApp"></a>
-        <a href="https://animesvision.org/home"><img src="pics/animevision.png" alt="AnimeVision"></a>
+        <a href="https://www.crunchyroll.com"><img src="pics/crunchyroll.png" alt="Crunchyroll"></a>
         <a href="https://myanimelist.net/"><img src="pics/myanimelist.png" alt="MyAnimeList"></a>
         <a href="https://flathub.org/"><img src="pics/flathub.png" alt="Flathub"></a>
         <a href="https://mail.google.com/mail/u/0/"><img src="pics/gmail.jpg" alt="Gmail"></a>
